<resources>
    <string name="app_name">Rabbit Cage Monitoring</string>
    <string name="descriptionLogo">Rabbit</string>
    <string name="title">Sistem Monitoring Kondisi Kandang Kelinci</string>
    <string name="description">Sistem ini merupakan pemeriksaan kesehatan berupa suhu dan kelembaban, pemberian pakan pada kelinci dan pembersihan kotoran kandang.</string>
    <string name="nameButton">Mulai</string>
    <string name="description_icon_clock">Clock View</string>
    <string name="title_cage">Kondisi Kandang</string>
    <string name="temperature">Suhu Udara</string>
    <string name="humidity_text">Kelembaban</string>
    <string name="title_temperature_humidity"><![CDATA[Suhu & Kelembaban]]></string>
    <string name="subtitle_temperature">Atur Suhu Awal dan Akhir sebagai Acuan:</string>
    <string name="subtitle_humidity">Atur Kelembaban Awal dan Akhir sebagai Acuan :</string>
    <string name="title_eat_drink"><![CDATA[Makan & Minum]]></string>
    <string name="subtitle_eat_drink">Pengaturan Makan &amp; Minum Melalui Waktu :</string>
    <string name="text_time">Time</string>
    <string name="title_input_eat">Berat Makan :</string>
    <string name="title_update">Update</string>
    <string name="unit_eat">gr</string>
    <string name="unit_drink">ml</string>
    <string name="title_input_drink">Berat Minum :</string>
    <string name="title_cleaning_dir">Pembersihan Kotoran</string>
    <string name="subtitle_cleaning_dirt">Pengaturan Pembersihan Kotoran Melalui Waktu:</string>
    <string name="title_notification">Notifikasi</string>
    <string name="title_splash_screen">Rabbit Cage Monitoring</string>
    <string name="title_manual_settings"><![CDATA[Pengaturan Makan & Minum Secara Manual :]]></string>
</resources>