<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="7dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            style="@style/TextStyle"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/title_eat_drink"/>

        <TextView
            style="@style/TextStyle"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/title_manual_settings"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchTv_eat"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:thumb="@drawable/thumb"
                    app:track="@drawable/track" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="10dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/eatIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/food_icon" />

                    <TextView
                        android:id="@+id/eatTv_text"
                        style="@style/TextStyle.CardText"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/eatIcon"
                        android:gravity="center_vertical"
                        android:text="Servo Makan"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/eatTv_condition"
                        style="@style/TextStyle.CardText"
                        android:layout_below="@id/eatTv_text"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/eatIcon"
                        android:gravity="center_vertical"
                        android:text="Mati"
                        android:textSize="16sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center|end"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchTv_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:thumb="@drawable/thumb"
                    app:track="@drawable/track" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="10dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/drinkIcon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/water_icon" />

                    <TextView
                        android:id="@+id/drinkTv_text"
                        style="@style/TextStyle.CardText"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/drinkIcon"
                        android:gravity="center_vertical"
                        android:text="Pump Minum"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/drinkTv_condition"
                        style="@style/TextStyle.CardText"
                        android:layout_below="@id/drinkTv_text"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/drinkIcon"
                        android:gravity="center_vertical"
                        android:text="Mati"
                        android:textSize="16sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <TextView
            style="@style/TextStyle"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_marginVertical="10dp"
            android:textSize="16sp"
            android:text="@string/subtitle_eat_drink"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/timeButton_morning"
                    style="@style/TextStyle.ButtonTime"
                    app:backgroundTint="@color/white"
                    app:rippleColor="@color/blue_300"
                    android:text="@string/text_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginTop="5dp"
                    android:text="Pagi"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/timeButton_afternoon"
                    style="@style/TextStyle.ButtonTime"
                    android:layout_marginHorizontal="16dp"
                    app:backgroundTint="@color/white"
                    app:rippleColor="@color/blue_300"
                    android:text="@string/text_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="Siang"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/timeButton_night"
                    style="@style/TextStyle.ButtonTime"
                    app:backgroundTint="@color/white"
                    app:rippleColor="@color/blue_300"
                    android:text="@string/text_time"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="Malam"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/title_input_eat"/>

            <EditText
                android:id="@+id/input_eat"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone"
                android:inputType="number"/>

            <TextView
                android:id="@+id/eat_tv"
                style="@style/TextStyle"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:text="0"/>

            <TextView
                style="@style/TextStyle"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/unit_eat"/>

            <ImageButton
                android:id="@+id/edit_eat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/black"
                android:background="@drawable/ic_edit"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/update_eat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:elevation="10dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:visibility="gone"
                android:text="@string/title_update"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/title_input_drink"/>

            <EditText
                android:id="@+id/input_drink"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone"
                android:inputType="number"
                android:autofillHints="Input Drink" />

            <TextView
                android:id="@+id/drink_tv"
                style="@style/TextStyle"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:text="0"/>

            <TextView
                style="@style/TextStyle"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:text="@string/unit_drink"/>

            <ImageButton
                android:id="@+id/edit_drink_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/black"
                android:background="@drawable/ic_edit"
                android:visibility="visible" />

            <Button
                android:id="@+id/update_drink_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:elevation="10dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:visibility="gone"
                android:text="@string/title_update"/>

        </LinearLayout>





    </LinearLayout>

</androidx.cardview.widget.CardView>