<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="7dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            style="@style/TextStyle"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/title_cleaning_dir"/>

        <TextView
            style="@style/TextStyle"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="Pengaturan Pembersihan Kotoran Secara Manual :"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="2"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchTv_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:thumb="@drawable/thumb"
                app:track="@drawable/track" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/cleanIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/food_icon" />

                <TextView
                    android:id="@+id/cleanTv_text"
                    style="@style/TextStyle.CardText"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@id/cleanIcon"
                    android:gravity="center_vertical"
                    android:text="Servo Pembersih"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cleanTv_condition"
                    style="@style/TextStyle.CardText"
                    android:layout_below="@id/cleanTv_text"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@id/cleanIcon"
                    android:gravity="center_vertical"
                    android:text="Mati"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextStyle"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginVertical="10dp"
            android:text="@string/subtitle_cleaning_dirt"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/timeButton_one"
                    style="@style/TextStyle.ButtonTime"
                    app:backgroundTint="@color/white"
                    app:rippleColor="@color/blue_300"
                    android:text="@string/text_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginTop="5dp"
                    android:text="Pagi"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/timeButton_two"
                    style="@style/TextStyle.ButtonTime"
                    android:layout_marginHorizontal="16dp"
                    app:backgroundTint="@color/white"
                    app:rippleColor="@color/blue_300"
                    android:text="@string/text_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginTop="5dp"
                    android:text="Malam"/>

            </LinearLayout>



        </LinearLayout>




    </LinearLayout>



</androidx.cardview.widget.CardView>